--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,17 @@
 				<groupId>com.spotify</groupId>
 				<artifactId>dockerfile-maven-plugin</artifactId>
 				<version>1.3.4</version>
+				<executions>
+                			 <execution>
+                     				<id>default</id>
+                    				 <goals>
+                        				 <goal>build</goal>
+                    				 </goals>
+                 			</execution>
+           			  </executions>
 				<configuration>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
+					<tag>${project.version}</tag>
 				</configuration>
 			</plugin>
 			<plugin>
