--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 				<configuration>
 					<repository>${docker.image.prefix}/${project.artifactId}</repository>
 					<tag>${project.version}</tag>
+					<pullNewerImage>false</pullNewerImage>
 				</configuration>
 			</plugin>
 			<plugin>
